--- a/templates/base.twig
+++ b/templates/base.twig
@@ -3,8 +3,11 @@
 <head>
     <meta charset="utf-8">
     <title>My super awesome run diary</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+
 </head>
 <body>
 <div class="container">
@@ -15,7 +18,8 @@
         {# Block ohne Standard-Inhalt #}
         {% block content %}{% endblock %}
     </main>
-
+    <script src="../Diary.js"></script>
+    <script src="../submitNewEntry.js"></script>
 </div>
 </body>
 </html>
