--- a/templates/newEntryForm.twig
+++ b/templates/newEntryForm.twig
@@ -1,1 +1,24 @@
-<form><input><button type="submit">Hallo</button></form>
+<h2>Neuen Eintrag hinzufügen</h2>
+<form class="col-8">
+    <div class="form-group row">
+        <label for="input-date" class="col-2 col-form-label">Date</label>
+        <div class="col-10">
+            <input  class="form-control" type="date" name="date" value="2017-11-12" id="input-date">
+        </div>
+    </div>
+    <div class="form-group row">
+        <label for="input-time" class="col-2 col-form-label">Time</label>
+        <div class="col-10">
+            <input  class="form-control" value="10:10:10" type="time" name="time" id="input-time"><br>
+        </div>
+    </div>
+    <div class="form-group row">
+        <label for="input-distance" class="col-2 col-form-label">Distance</label>
+        <div class="col-10">
+            <input  class="form-control" type="number" value="10" name="distance" id="input-distance"><br>
+        </div>
+    </div>
+
+
+
+    <button class="btn btn-primary" id="submit-entry">Save</button></form>
