--- a/templates/overview.twig
+++ b/templates/overview.twig
@@ -1,1 +1,2 @@
-Hallo from overview
+Einträge gesamt: {{ entireDays }} <br>
+Zeitraum zwischen erstem und letztem Eintrag: {{ daysBetweenEndAndBeginning }} Tage
