--- a/templates/diary.twig
+++ b/templates/diary.twig
@@ -1,3 +1,20 @@
-<table>
-    
+<table class="table table-dark table-striped col-12">
+    <thead>
+    <tr>
+        <th>Date</th>
+        <th>Distance</th>
+        <th>Time</th>
+        <th>Average Speed</th>
+    </tr>
+    </thead>
+    <tbody>
+    {% for date, runEntry in diary %}
+        <tr>
+            <td>{{ date }}</td>
+            <td>{{ runEntry.distance }}</td>
+            <td>{{ runEntry.time }}</td>
+            <td>{{ runEntry.avgSpeed }}</td>
+        </tr>
+    {% endfor %}
+    </tbody>
 </table>
