--- a/templates/newEntryForm.twig
+++ b/templates/newEntryForm.twig
@@ -1,4 +1,4 @@
-<h2>Neuen Eintrag hinzufügen</h2>
+<h2>Add a new entry</h2>
 <form class="col-8">
     <div class="form-group row">
         <label for="input-date" class="col-2 col-form-label">Date</label>
@@ -21,4 +21,4 @@
 
 
 
-    <button class="btn btn-primary" id="submit-entry">Save</button></form>
+    <button class="btn btn-warning" id="submit-entry">Save</button></form>
