--- a/templates/overview.twig
+++ b/templates/overview.twig
@@ -1,2 +1,8 @@
-Einträge gesamt: {{ entireDays }} <br>
-Zeitraum zwischen erstem und letztem Eintrag: {{ daysBetweenEndAndBeginning }} Tage
+<div class="alert alert-dismissible alert-success col-3" style="text-align: center; margin: auto; ">
+    Entire entries: <br>
+    <div class="text-shadow">{{ entireDays }} </div><br>
+</div> <br>
+<div class="alert alert-dismissible alert-success col-3" style="text-align: center; margin: auto; ">
+    Amount of days between first and last entry: <br>
+    <div class="text-shadow">{{ daysBetweenEndAndBeginning }} days </div><br>
+</div>
