--- a/templates/base.twig
+++ b/templates/base.twig
@@ -7,6 +7,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="../bootswacht.css">
+    <link rel="stylesheet" href="../style.css">
 
 </head>
 <body>
@@ -14,12 +16,11 @@
 
 
     <main>
-        <h1>Run diary</h1>
+        <h1 style="text-align: center; ">My awesome run diary</h1>
         {# Block ohne Standard-Inhalt #}
         {% block content %}{% endblock %}
     </main>
     <script src="../Diary.js"></script>
-    <script src="../submitNewEntry.js"></script>
 </div>
 </body>
 </html>
