--- a/templates/diary.twig
+++ b/templates/diary.twig
@@ -1,4 +1,4 @@
-<table class="table table-dark table-striped col-12">
+<table class="table table-striped col-12">
     <thead>
     <tr>
         <th>Date</th>
@@ -11,9 +11,9 @@
     {% for date, runEntry in diary %}
         <tr>
             <td>{{ date }}</td>
-            <td>{{ runEntry.distance }}</td>
-            <td>{{ runEntry.time }}</td>
-            <td>{{ runEntry.avgSpeed }}</td>
+            <td>{{ runEntry.distance }} km </td>
+            <td>{{ (runEntry.time / 3600)|round(2, 'floor')  }} h</td>
+            <td>{{ runEntry.avgSpeed|round(2, 'floor') }} km/h</td>
         </tr>
     {% endfor %}
     </tbody>
