Added some validation logic

--- a/templates/newEntryForm.twig
+++ b/templates/newEntryForm.twig
@@ -18,7 +18,11 @@
             <input  class="form-control" type="number" value="10" name="distance" id="input-distance"><br>
         </div>
     </div>
+    <div class="alert alert-success" id="form-submit-mess" role="alert">
+
+    </div>
 
 
 
-    <button class="btn btn-warning" id="submit-entry">Save</button></form>
+    <div class="btn btn-warning" id="submit-entry">Save</div>
+</form>
