Added remove function

--- a/templates/newEntryForm.twig
+++ b/templates/newEntryForm.twig
@@ -9,20 +9,24 @@
     <div class="form-group row">
         <label for="input-time" class="col-2 col-form-label">Time</label>
         <div class="col-10">
-            <input  class="form-control" value="10:10:10" type="time" name="time" id="input-time"><br>
+            <input  class="form-control" value="10:10:10" type="time" name="time" id="input-time">
+            <br>
         </div>
     </div>
     <div class="form-group row">
         <label for="input-distance" class="col-2 col-form-label">Distance</label>
         <div class="col-10">
-            <input  class="form-control" type="number" value="10" name="distance" id="input-distance"><br>
+            <input  class="form-control" type="number" value="10" name="distance" id="input-distance">
+            <br>
         </div>
     </div>
     <div class="alert alert-success" id="form-submit-mess" role="alert">
-
+        <!-- Placeholder for a custom message -->
     </div>
 
 
 
-    <div class="btn btn-warning" id="submit-entry">Save</div>
+    <div class="btn btn-warning" id="submit-entry">
+        Save
+    </div>
 </form>
