--- a/templates/diary.twig
+++ b/templates/diary.twig
@@ -14,6 +14,7 @@
             <td>{{ runEntry.distance }} km </td>
             <td>{{ (runEntry.time / 3600)|round(2, 'floor')  }} h</td>
             <td>{{ runEntry.avgSpeed|round(2, 'floor') }} km/h</td>
+            <td><button id="{{ date }}" class="delete-button">Delete</button></td>
         </tr>
     {% endfor %}
     </tbody>
