--- a/templates/overview.twig
+++ b/templates/overview.twig
@@ -1,8 +1,15 @@
 <div class="alert alert-dismissible alert-success col-3" style="text-align: center; margin: auto; ">
     Entire entries: <br>
-    <div class="text-shadow">{{ entireDays }} </div><br>
-</div> <br>
+    <div class="text-shadow">
+        {{ entireDays }}
+    </div>
+    <br>
+</div>
+<br>
 <div class="alert alert-dismissible alert-success col-3" style="text-align: center; margin: auto; ">
     Amount of days between first and last entry: <br>
-    <div class="text-shadow">{{ daysBetweenEndAndBeginning }} days </div><br>
+    <div class="text-shadow">
+        {{ daysBetweenEndAndBeginning }} days
+    </div>
+    <br>
 </div>
