Changed button style

--- a/templates/newEntryForm.twig
+++ b/templates/newEntryForm.twig
@@ -26,7 +26,7 @@
 
 
 
-    <div class="btn btn-warning" id="submit-entry">
+    <button class="btn btn-warning" id="submit-entry">
         Save
-    </div>
+    </button>
 </form>
