Created messages for deleting an entry

--- a/templates/app.twig
+++ b/templates/app.twig
@@ -27,6 +27,9 @@
         </div>
         <div class="diary col-12 tab-pane" id="diary-tab" role="tabpanel">
             <div class="card text-white bg-primary">
+                <div>
+                    <div id="diaryMess" class="alert alert-success" style="display: none;"></div>
+                </div>
                 <div class="card-body" id="diary">
                 </div>
             </div>
