--- a/templates/newEntryForm.twig
+++ b/templates/newEntryForm.twig
@@ -20,13 +20,12 @@
             <br>
         </div>
     </div>
-    <div class="alert alert-success" id="form-submit-mess" role="alert">
-        <!-- Placeholder for a custom message -->
+    <div class="alert alert-success" id="form-submit-mess" role="alert" style="display: none; ">
     </div>
 
 
 
-    <button class="btn btn-warning" id="submit-entry">
+    <div class="btn btn-warning" id="submit-entry">
         Save
-    </button>
+    </div>
 </form>
