--- a/templates/diary.twig
+++ b/templates/diary.twig
@@ -1,4 +1,4 @@
-<table class="table table-striped col-12">
+<table class="table table-striped col-12" id="diary">
     <thead>
     <tr>
         <th>Date</th>
